--- a/src/main/resources/templates/manager/login.html
+++ b/src/main/resources/templates/manager/login.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}"/>
     <link rel="stylesheet" href="../../static/css/bootstrap-theme.min.css" th:href="@{/css/bootstrap-theme.min.css}"/>
     <link rel="stylesheet" href="../../static/css/hotel.css" th:href="@{/css/hotel.css}"/>
+    <title>Ticket - 经理 - 登录</title>
 </head>
 <body>
 
