--- a/src/main/resources/templates/payment/pay.html
+++ b/src/main/resources/templates/payment/pay.html
@@ -6,6 +6,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Ticket - 支付 - 外部支付</title>
 </head>
 
 <body>
