--- a/src/main/resources/templates/plan/selectSeat.html
+++ b/src/main/resources/templates/plan/selectSeat.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../../static/css/hotel.css" th:href="@{/css/hotel.css}"/>
     <!--<link rel="stylesheet" href="../../static/css/other.css" th:href="@{/css/other.css}"/>-->
     <link rel="stylesheet" href="../../static/css/jquery.seat-charts.css" th:href="@{/css/jquery.seat-charts.css}"/>
-    <title>选座购票</title>
+    <title>Ticket - 会员 - 选座购票</title>
 </head>
 
 
