--- a/src/main/resources/templates/plan/unselectSeat.html
+++ b/src/main/resources/templates/plan/unselectSeat.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" href="../../static/css/w3.css" th:href="@{/css/w3.css}"/>
 
-    <title>不选座购票</title>
+    <title>Ticket - 会员 - 不选座购票</title>
 </head>
 
 
