--- a/src/main/resources/templates/manager/settlement.html
+++ b/src/main/resources/templates/manager/settlement.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}"/>
     <link rel="stylesheet" href="../../static/css/bootstrap-theme.min.css" th:href="@{/css/bootstrap-theme.min.css}"/>
     <link rel="stylesheet" href="../../static/css/hotel.css" th:href="@{/css/hotel.css}"/>
-    <title>Hotel Settlement Page</title>
+    <title>Ticket - 经理 - 结算</title>
 </head>
 <body>
 
@@ -22,27 +22,24 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html" th:href="@{index}">Hostel World</a>
+            <a class="navbar-brand" href="index.html" th:href="@{index}">Ticket</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a class="" href="index.html" th:href="@{index}">Message<span
-                        class="badge">4</span><span
-                        class="sr-only">(current)</span></a></li>
-                <li><a href="statistics.html" th:href="@{statistics}">Hotel Statistics</a></li>
-                <li class="active"><a href="settlement.html" th:href="@{settlements}">Hotel Settlement</a></li>
-
+                <li><a class="" href="index.html" th:href="@{index}">审批
+                     <span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="settlement.html" th:href="@{settlement}">结算</a></li>
+                <li><a href="statistics.html" th:href="@{statistics}" >统计</a></li>
 
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">Welcome, Smith <span class="caret"></span></a>
+                       aria-expanded="false">Welcome,<span class="caret" th:text="${managerID}"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="../account/index.html" th:href="@{../logout}">Sign out</a></li>
-                        <li><a href="../account/register.html" th:href="@{../register}">Register</a></li>
+                        <li><a href="../manager/index.html" th:href="@{/manager/logout}">登出</a></li>
                     </ul>
                 </li>
             </ul>
@@ -55,24 +52,23 @@
 
     <div class="panel panel-info" id="settlementsTable">
         <!-- Default panel contents -->
-        <div class="panel-heading">Settle Approvals</div>
+        <div class="panel-heading">所有活动</div>
         <div class="table-responsive ">
             <table class="table table-hover" id="openTable">
                 <tr>
-                    <th>Check</th>
-                    <th>No</th>
-                    <th>Hotel</th>
-                    <th>Amount($)</th>
-                    <th>Status</th>
-                    <th>Action</th>
+                    <th>选择</th>
+                    <th>活动ID</th>
+                    <th>场馆ID</th>
+                    <th>目前收入</th>
+                    <th>进行结算</th>
                 </tr>
-                <tr th:each="settle : ${settlements}"
-                    th:class="(${settle.status == 0}) ? 'info' :  ((${settle.status == 1}) ? 'success' :  'danger')">
-                    <td><input th:if="${settle.status==0}" title="order" type="checkbox" th:name="${settle.id}"/></td>
-                    <td th:text="${#numbers.formatInteger(settle.id,7)}">0000001</td>
-                    <td th:text="${settle.hotelId}">Shanghai Hotel</td>
-                    <td th:text="${settle.amount}">500</td>
-                    <td th:text="(${settle.status == 0}) ? 'Not Deal Yet' :  ((${settle.status == 1}) ? 'Approved' :  'Denied')">
+                <tr th:each="settle : ${plans}"
+                    th:class="${settle.planIncome >= 0} ? 'info' : 'danger'">
+                    <td><input title="order" type="checkbox" th:name="${settle.planID}"/></td>
+                    <td th:text="${#numbers.formatInteger(settle.planID,7)}">0000001</td>
+                    <td th:text="${#numbers.formatInteger(settle.siteID,7)}">0000001</td>
+                    <td th:text="${settle.planIncome}">500</td>
+                    <td th:text="${settle.planIncome <= 0} ? '不可结算' :   '可结算'">
                         Not Deal Yet
                     </td>
                     <td>
@@ -90,22 +86,21 @@
 
     </div>
     <div class="btn-group">
-        <a href="javascript:" type="button" class="btn btn-primary operation" name="approve">Group Approve</a>
+        <a href="javascript:" type="button" class="btn btn-primary operation" name="approve">批量结算</a>
         <a href="#" type="button" class="btn btn-primary dropdown-toggle " data-toggle="dropdown"
            aria-haspopup="true" aria-expanded="false">
             <span class="caret"></span>
             <span class="sr-only">Toggle Dropdown</span>
         </a>
-        <ul class="dropdown-menu">
-            <li><a href="javascript:" class="operation" name="deny">Deny</a></li>
-        </ul>
+        <!--<ul class="dropdown-menu">-->
+            <!--<li><a href="javascript:" class="operation" name="deny"></a></li>-->
+        <!--</ul>-->
     </div>
 
 
     <div class="alert alert-danger invisible" role="alert"></div>
 </div>
 
-<div th:include="footer :: copy"></div>
 
 
 <!--Scripts-->
@@ -152,7 +147,7 @@
         }
 
         if (operationArray.length == 0) {
-            var error_msg = '<p class="errtip">	<strong>Error</strong>：' + 'No rows are selected' + '</p>';
+            var error_msg = '<p class="errtip">	<strong>Error</strong>：' + '没有选择任何行' + '</p>';
             $(".alert-danger").html(error_msg).removeClass("invisible");
             return;
         }
@@ -163,7 +158,7 @@
         console.log(inputs);
         $.ajax({
             type: "POST",
-            url: '/manager/settlements',
+            url: '/manager/settlement',
             data: inputs,
             dataType: 'json',
             success: function (data) {
