--- a/src/main/resources/templates/site/addPlan.html
+++ b/src/main/resources/templates/site/addPlan.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../../static/css/bootstrap-theme.min.css" th:href="@{/css/bootstrap-theme.min.css}"/>
     <link rel="stylesheet" href="../../static/css/hotel.css" th:href="@{/css/hotel.css}"/>
     <link rel="stylesheet" href="../../static/css/other.css" th:href="@{/css/other.css}"/>
-    <title>新活动申请</title>
+    <title>Ticket - 场馆 - 发布活动</title>
 </head>
 <body>
 
@@ -35,7 +35,7 @@
 
                 <li ><a href="plansShow.html" th:href="@{plansShow}">活动一览</a></li>
 
-                <li class="active"><a href="addPlan.html" th:href="@{addPlan}">申请活动</a></li>
+                <li class="active"><a href="addPlan.html" th:href="@{addPlan}">发布活动</a></li>
 
                 <li><a href="buyOffline.html" th:href="@{buyOffline}">现场购票</a></li>
 
@@ -46,7 +46,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">Welcome, <span class="caret" th:text="${siteID}"></span></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="../account/index.html" th:href="@{../logout}">Sign out</a></li>
+                        <li><a href="../account/index.html" th:href="@{/site/logout}">Sign out</a></li>
                     </ul>
                 </li>
             </ul>
@@ -73,7 +73,7 @@
                     <th>豪华座价格</th>
                     <th>高等座价格</th>
                     <th>普通座价格</th>
-                    <th>审核状态</th>
+                    <!--<th>审核状态</th>-->
                 </tr>
 
                 <tr th:each="plan : ${plans}"   >
@@ -85,15 +85,15 @@
                     <td th:text="${plan.original_price_A}"> 9999</td>
                     <td th:text="${plan.original_price_B}"> 8000</td>
                     <td th:text="${plan.original_price_C}"> 5000</td>
-                    <td th:if="${plan.state==0}" th:text = "审核中">
-                        审核中
-                    </td>
-                    <td th:if="${plan.state==1}" th:text = "通过">
-                        通过
-                    </td>
-                    <td th:if="${plan.state==2}" th:text = "拒绝">
-                        拒绝
-                    </td>
+                    <!--<td th:if="${plan.state==0}" th:text = "审核中">-->
+                        <!--审核中-->
+                    <!--</td>-->
+                    <!--<td th:if="${plan.state==1}" th:text = "通过">-->
+                        <!--通过-->
+                    <!--</td>-->
+                    <!--<td th:if="${plan.state==2}" th:text = "拒绝">-->
+                        <!--拒绝-->
+                    <!--</td>-->
                 </tr>
             </table>
         </div>
@@ -101,7 +101,7 @@
 
     </div>
     <div>
-        <a href="javascript:" class="btn btn-primary my-pop-1">申请新活动</a>
+        <a href="javascript:" class="btn btn-primary my-pop-1">发布新活动</a>
     </div>
 
 </div>
@@ -112,12 +112,12 @@
 
         <div class="panel panel-info">
             <!-- Default panel contents -->
-            <div class="panel-heading">活动申请</div>
+            <div class="panel-heading">活动发布</div>
 
             <form class="form-horizontal" action="addPlan.html">
 
                 <div class="form-group">
-                    <label for="description" class="col-sm-2 control-label">活动</label>
+                    <label for="description" class="col-sm-2 control-label">活动名称</label>
                     <div class="col-sm-10">
                         <input type="url" class="form-control" name="description" id="description" placeholder=" "/>
                     </div>
