--- a/src/main/resources/templates/site/info.html
+++ b/src/main/resources/templates/site/info.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="../../static/css/hotel.css" th:href="@{/css/hotel.css}"/>
     <link rel="stylesheet" href="../../static/css/other.css" th:href="@{/css/other.css}"/>
     <link rel="stylesheet" href="../../static/css/w3.css" th:href="@{/css/w3.css}"/>
-    <title>场馆信息</title>
+    <title>Ticket - 场馆 - 场馆信息</title>
 </head>
 <body>
 
@@ -45,7 +45,7 @@
 
                 <li><a href="plansShow.html" th:href="@{plansShow}">活动一览</a></li>
 
-                <li><a href="addPlan.html" th:href="@{addPlan}">申请活动</a></li>
+                <li><a href="addPlan.html" th:href="@{addPlan}">发布活动</a></li>
 
                 <li><a href="buyOffline.html" th:href="@{buyOffline}">现场购票</a></li>
 
@@ -55,9 +55,9 @@
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">Welcome, <span class="caret" th:text="${siteID}"></span></a>
+                       aria-expanded="false">Welcome, <span th:text="${siteID}"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="../site/login.html" th:href="@{../logout}">Sign out</a></li>
+                        <li><a href="../site/login.html" th:href="@{/site/logout}">Sign out</a></li>
                         <!--<li><a href="../account/register.html" th:href="@{../register}">Register</a></li>-->
                     </ul>
                 </li>
@@ -71,6 +71,8 @@
 
     <div class="cover"  style="'background-image: url('../../static/img/hotel/hotel1.JPG')'" th:style="'background-image: url(' + ${site.picUrl} + ')'" ></div>
     <h3 th:text="${site.siteName}">  Good Site </h3>
+    <h3 th:if="${siteState==true}"  th:text="已上线">  已上线 </h3>
+    <h3 th:if="${siteState==false}" th:text="未上线">  未上线 </h3>
     <div class="table-responsive">
         <table class="w3-table w3-bordered w3-striped w3-card-4">
             <tr>
