--- a/src/main/resources/templates/site/register.html
+++ b/src/main/resources/templates/site/register.html
@@ -13,7 +13,7 @@
 
 <div class="row">
     <div class="col-md-4 col-md-offset-4">
-        <h1>场馆注册</h1>
+        <h1>Ticket - 场馆 - 注册</h1>
     </div>
 </div>
 
